# CSnT

./: .gitignore  README.md  pyproject.toml  train.py
config/: config.py  config.yaml
modules/: c2.py  csnt.py  dataset.py
utils/: load.py  pca.py  utils.py
